# mlops

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  commands.py  docker-compose.yaml  pyproject.toml
.dvc/: config
ag_news_classifier/: bert_model.py  config.py  dataset.py  infer.py  logger_selector.py  plotter.py  train.py
conf/: config.yaml
conf/data/: data.yaml
conf/logging/: logging.yaml
conf/model/: model.yaml
conf/trainer/: trainer.yaml
conf/training/: training.yaml
models/: model_val_loss=0.22.ckpt.dvc
plots/: .gitignore
plots/167466157067252679/: meta.yaml
plots/167466157067252679/6d6da5bdbb324353a3fb53f9eaa59942/: meta.yaml
plots/167466157067252679/6d6da5bdbb324353a3fb53f9eaa59942/metrics/: epoch  test_acc  test_f1_score  test_loss  test_precision  test_recall  train_acc  train_f1_score  train_loss  train_precision  train_recall  val_acc  val_f1_score  val_loss  val_precision  val_recall
plots/167466157067252679/6d6da5bdbb324353a3fb53f9eaa59942/tags/: mlflow.runName  mlflow.source.git.commit
plots/960470395858666371/: meta.yaml
plots/960470395858666371/ffb97b79803b4bf9aaca43d6cbdb0a4a/: meta.yaml
plots/960470395858666371/ffb97b79803b4bf9aaca43d6cbdb0a4a/metrics/: epoch  test_acc  test_loss  val_acc  val_loss
plots/960470395858666371/ffb97b79803b4bf9aaca43d6cbdb0a4a/tags/: mlflow.source.git.commit
